# Shackles

./: README.md  pyproject.toml
src/shackles/: __main__.py  client.py  manager.py  utils.py
